@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> bambus-2.33.ebuild:
+  sci-biology/bambus: fixed installation of perl-related files
+
   31 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> bambus-2.33.ebuild:
   sci-biology/bambus: fix installation process and use current perl-module files
   from amos package instead
